--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
   "files.exclude": {
     "**/*.pyc": true,
     "**/.mypy_cache/**": true,
+    "**/.pytest_cache": true,
     "**/__pycache__": true,
     ".nyc_output": true,
     "bin": true,
