--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,31 +14,24 @@ jobs:
         python-version: [3.11]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install Poetry
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
+      - name: Install Rye
+        uses: baptiste0928/cargo-install@v2
+        with:
+          crate: rye
+          git: https://github.com/mitsuhiko/rye
+          branch: main
 
       - name: Install library
-        run: python -m poetry install
+        run: rye sync
 
-      - name: Lint check with flake8
-        run: python -m poetry run flake8 --config=.flake8
+      - name: Lint
+        run: rye run lint
 
-      - name: Lint check with mypy
-        run: python -m poetry run mypy --config-file=mypy.ini .
-
-      - name: Format check with black
-        run: python -m poetry run black --check --diff .
-
-      - name: Test with pytest
-        run: python -m poetry run pytest
-
-      - name: Build with poetry
-        run: python -m poetry build
+      - name: Test
+        run: rye run test
