--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,53 @@
-[tool.poetry]
-name = "python_template"
-version = "0.1.1"
-description = "Python template repository. Please change tool.poetry and python_template directory when you use it"
-authors = ["naoki-maeda"]
-license = "MIT"
+[project]
+name = "python-template"
+version = "0.1.0"
+description = "Python Template with Rye"
+authors = [
+    { name = "naoki-maeda", email = "infrontofden@gmail.com" }
+]
+dependencies = []
+readme = "README.md"
+requires-python = ">= 3.11"
 
-[tool.poetry.dependencies]
-python = "^3.11"
-
-[tool.poetry.dev-dependencies]
-mypy = "^0.961"
-black = "^22.6.0"
-flake8 = "^4.0.1"
-isort = "^5.10.1"
-pytest = "^7.1.2"
-pre-commit = "^2.20.0"
+[project.scripts]
+main = "python_template.main:main"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "ruff~=0.0.275",
+    "black~=23.3.0",
+    "isort~=5.12.0",
+    "pytest~=7.4.0",
+    "pre-commit~=3.3.3",
+    "mypy~=1.4.1",
+]
+
+[tool.rye.scripts]
+format = { chain = ["black src/", "isort src/"] }
+lint = { chain = ["black --check src/", "ruff check src/", "mypy src/"] }
+test = { chain = ["pytest src/tests/"] }
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.ruff]
+target-version = "py311"
+line-length = 120
+select = [
+    "ALL"
+]
+ignore = ["ANN101", "B008", "D100", "D103", "D104", "D107", "D203", "D213", "FBT001", "FBT002", "PLR0913", "S101", "T201"]
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+line_length = 120
+multi_line_output = 3
+include_trailing_comma = true
+use_parentheses = true
