--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Rye
-        uses: baptiste0928/cargo-install@v2
+        uses: dsaltares/fetch-gh-release-asset@master
         with:
-          crate: rye
-          git: https://github.com/mitsuhiko/rye
-          branch: main
+          repo: mitsuhiko/rye
+          version: tags/v0.9.0
+          file: rye-x86_64-linux.gz
 
-      - name: Install library
+      - name: Install Python Library
         run: rye sync
 
       - name: Lint
@@ -35,3 +35,6 @@ jobs:
 
       - name: Test
         run: rye run test
+
+      - name: Build
+        run: rye build
