--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: mitsuhiko/rye
-          version: tags/v0.9.0
+          version: tags/0.9.0
           file: rye-x86_64-linux.gz
 
       - name: Install Python Library
