--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  testing:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -21,11 +21,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Rye
-        uses: dsaltares/fetch-gh-release-asset@master
-        with:
-          repo: mitsuhiko/rye
-          version: tags/0.9.0
-          file: rye-x86_64-linux.gz
+        uses: sksat/setup-rye@v0.1.0
 
       - name: Install Python Library
         run: rye sync
